--- a/MyProject.html
+++ b/MyProject.html
@@ -53,12 +53,12 @@
       <button id="scrlbtnL" class="btnc">&#8678;</button>
       <h2>My Projects</h2>
       <div class="row">
-        <div class="box"><p>Calculator</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><a href="./Projects/Calculator/index.html">Visit</a></p></div>
-        <div class="box"><p>Tic Tac Toe</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><a href="./Projects/Tic-Tac-Toe/index.html">Visit</a></p></div>
-        <div class="box"><p>Memory Game</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><a href="./Projects/Memory Game/index.html">Visit</a></p></div>
-        <div class="box"><p>Weather App</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><a href="./Projects/WeatherApp/index.html">Visit</a></p></div>
-        <div class="box"><p>To Do List</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><a href="./Projects/ToDo/index.html">Visit</a></p></div>
-        <div class="box"><p>Currency Converter</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><a href="./Projects/CurrencyConverter/index.html">Visit</a></p></div>
+        <div class="box"><p>Calculator</p><p>This is an simple calculator with Basic Operatoins<br><a href="./Projects/Calculator/index.html" target="blank">Visit</a></p></div>
+        <div class="box"><p>Tic Tac Toe</p><p>Simple TIC TAC TOE game, Play And Fun<br><a href="./Projects/Tic-Tac-Toe/index.html" target="blank">Visit</a></p></div>
+        <div class="box"><p>Memory Game</p><p>Simple Memory Game Match The Peices.<br><a href="./Projects/Memory Game/index.html" target="blank">Visit</a></p></div>
+        <div class="box"><p>Weather App</p><p>A Weather App To check Current Weather.<br><a href="./Projects/WeatherApp/index.html" target="blank">Visit</a></p></div>
+        <div class="box"><p>To Do List</p><p>Simple TO DO LIST APP For any task.<br><a href="./Projects/ToDo/index.html" target="blank">Visit</a></p></div>
+        <div class="box"><p>Currency Converter</p><p>Fetching DATA to convert Currency.<br><a href="./Projects/CurrencyConverter/index.html" target="blank">Visit</a></p></div>
       </div>
     </div>
   </section>
