--- a/MyProject.html
+++ b/MyProject.html
@@ -60,13 +60,15 @@
         <div class="box"><p>To Do List</p><p>Simple TO DO LIST APP For any task.<br><a href="./Projects/ToDo/index.html" target="blank">Visit</a></p></div>
         <div class="box"><p>Currency Converter</p><p>Fetching DATA to convert Currency.<br><a href="./Projects/CurrencyConverter/index.html" target="blank">Visit</a></p></div>
         <div class="box">
-
           <p>Base Converter</p>
-
           <p>Simple Ui to convert Number Base.<br><a href="./Projects/Number Base Converter/index.html" target="blank">Visit</a></p>
-
         </div>
-      </div>
+        <div class="box"><p>Text Utils</p><p>Note Maker And Some Operations.<br><a href="./Projects/TextUtils/index.html" target="blank">Visit</a></p></div>
+      <div class="box"><p>BricBall Game</p><p>Simple Hit The Brick Game.<br><a href="./Projects/BrickBall/index.html" target="blank">Visit</a></p></div>
+      <div class="box"><p>PingPong Game</p><p>Simple Ping Pong Game.<br><a href="./Projects/PingPong/index.html" target="blank">Visit</a></p></div>
+      <div class="box"><p>Local Time</p><p>Local Time Of Any Country.<br><a href="./Projects/LocalTime/index.html" target="blank">Visit</a></p></div>
+      <div class="box"><p>WhacAMole Game</p><p>Simple Game Whac The Mole.<br><a href="./Projects/WhacAMole/index.html" target="blank">Visit</a></p></div>
+      
     </div>
   </section>
 
