--- a/Projects/Tic-Tac-Toe/index.html
+++ b/Projects/Tic-Tac-Toe/index.html
@@ -7,55 +7,19 @@
 
   <title>Tic-Tac-Toe</title>
   
-  <!-- HTML -->
-  
-
-  <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  
-  <div class="body">
-    <div id="result">
-  Result
+  <div class="cont">
+  <h4 id="res">Player X Won</h4>
+  <h4 id="chnc">Player X Chance</h4>
+  <div id="root">
   </div>
-    <div id="turn">
-      player turns
-    </div>
-    
-<div class="board">
-  <div class="screen">
-    <div class="inp"></div>
-     <div class="inp"></div>
-      <div class="inp"></div>
+  <div class="btn">
+  <button type="button" class="btnrest" id="btnrest">Reset</button>
   </div>
-  <div class="screen">
-    <div class="inp"></div>
-     <div class="inp"></div>
-      <div class="inp"></div>
   </div>
-  <div class="screen">
-    <div class="inp"></div>
-     <div class="inp"></div>
-      <div class="inp"></div>
-  </div>
-  
-
-  
-</div>
-<div class="rest">
-  <button onclick="rest()" >RESET</button>
-</div>
-<select id="select">
-  <option value="1">board1</option>
-  <option value="2">board2</option>
-  <option value="3">board3</option>
-  <option value="4">board4</option>
-</select>
-</div>
-
-
   <script src="main.js"></script>
 </body>
 </html>
