--- a/MyProject.html
+++ b/MyProject.html
@@ -16,30 +16,30 @@
 <body>
 
   <span class="bt">
-    <img src="./Ball/sc.png " alt="cross">
-    <img src="./Ball/sc1.png " alt="cross">
-    <img src="./Ball/sc2.png " alt="cross">
-    <img src="./Ball/sc3.png " alt="cross">
-    <img src="./Ball/sc4.png " alt="cross">
+    <img src="./Ball/sc.png " alt="cross" placeholder="blur">
+    <img src="./Ball/sc1.png " alt="cross" placeholder="blur">
+    <img src="./Ball/sc2.png " alt="cross" placeholder="blur">
+    <img src="./Ball/sc3.png " alt="cross" placeholder="blur">
+    <img src="./Ball/sc4.png " alt="cross" placeholder="blur">
   </span>
   <span class="tp">
-    <img src="./Cross/cr.png" alt="cross">
-    <img src="./Cross/cr1.png" alt="cross">
-    <img src="./Cross/cr2.png" alt="cross">
-    <img src="./Cross/cr3.png" alt="cross">
-    <img src="./Cross/cr4.png" alt="cross">
+    <img src="./Cross/cr.png" alt="cross" placeholder="blur">
+    <img src="./Cross/cr1.png" alt="cross" placeholder="blur">
+    <img src="./Cross/cr2.png" alt="cross" placeholder="blur">
+    <img src="./Cross/cr3.png" alt="cross" placeholder="blur">
+    <img src="./Cross/cr4.png" alt="cross" placeholder="blur">
   </span>
 
   <header>
     <input type="checkbox" id="check" >
     <label for="check" class="checkbtn" >
-      <span class="menu tg" id="menu">&#9776;</span>
+      <span class="menu tg menubtn"  id="menu">&#9776;</span>
     </label>
     <div class="nav">
       <div class="navhead"><span>K</span>aran <span>K</span>umar</div>
       <div class="list">
         <ul>
-          <li class="navlist "><a href="index.html" class=" link">Home</a></li>
+          <li class="navlist"><a href="index.html" class=" link">Home</a></li>
         
           <li class="navlist "><a href="MyProject.html" class="active link">My Projects</a></li>
         </ul>
@@ -49,10 +49,10 @@
 
   <section>
     <div class="cont">
-      <button id="scrlbtnR" class="btnc">&#8680;</button>
-      <button id="scrlbtnL" class="btnc">&#8678;</button>
       <h2>My Projects</h2>
       <div class="row">
+      <button id="scrlbtnR" class="btnc"><span>&#8680;</span></button>
+      <button id="scrlbtnL" class="btnc"><span>&#8678;</span></button>
         <div class="box"><p>Calculator</p><p>This is an simple calculator with Basic Operatoins<br><a href="./Projects/Calculator/index.html" target="blank">Visit</a></p></div>
         <div class="box"><p>Tic Tac Toe</p><p>Simple TIC TAC TOE game, Play And Fun<br><a href="./Projects/Tic-Tac-Toe/index.html" target="blank">Visit</a></p></div>
         <div class="box"><p>Memory Game</p><p>Simple Memory Game Match The Peices.<br><a href="./Projects/Memory Game/index.html" target="blank">Visit</a></p></div>
