--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" type="image/svg+xml" href="/assets/logo.svg" />
   <title>PortFolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="Home.css">
@@ -35,7 +36,7 @@
   <header>
     <input type="checkbox" id="check" >
     <label for="check" class="checkbtn" >
-      <span class="menu tg" id="menu">&#9776;</span>
+      <span class="menu tg menubtn"  id="menu">&#9776;</span>
     </label>
     <div class="nav">
 
