--- a/MyProject.html
+++ b/MyProject.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PortFolio</title>
+   <link rel="icon" type="image/svg+xml" href="./assets/logo.svg" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="MyProject.css">
   <link rel="stylesheet" href="animation.css">
